[gd_scene load_steps=12 format=2]

[ext_resource path="res://interface/UI.gd" type="Script" id=1]
[ext_resource path="res://interface/HUD.gd" type="Script" id=2]
[ext_resource path="res://sprites/circle.png" type="Texture" id=3]
[ext_resource path="res://fonts/UI_font1.tres" type="DynamicFont" id=4]
[ext_resource path="res://interface/HUD/itemDisplayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://interface/pause_shortcut.tres" type="ShortCut" id=6]
[ext_resource path="res://interface/PauseMenu.gd" type="Script" id=7]
[ext_resource path="res://interface/UI_icons/play.png" type="Texture" id=8]
[ext_resource path="res://interface/UI_icons/retry.png" type="Texture" id=9]
[ext_resource path="res://interface/UI_icons/back.png" type="Texture" id=10]
[ext_resource path="res://interface/UI_icons/next.png" type="Texture" id=11]

[node name="UI" type="CanvasLayer" index="0"]

pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="HUD" type="VBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 2 )

[node name="pointsDisplayer" type="HBoxContainer" parent="MarginContainer/HUD" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 984.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 10
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HUD/pointsDisplayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0

[node name="number" type="Label" parent="MarginContainer/HUD/pointsDisplayer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 74.0
margin_top = 11.0
margin_right = 97.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="itemDisplayer" parent="MarginContainer/HUD" index="1" instance=ExtResource( 5 )]

margin_top = 68.0
margin_bottom = 146.0
_sections_unfolded = [ "Margin", "Mouse", "Size Flags", "custom_constants" ]

[node name="pause_button" type="Button" parent="MarginContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 978.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
size_flags_vertical = 0
toggle_mode = false
enabled_focus_mode = 0
shortcut = ExtResource( 6 )
group = null
text = "||"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "Size Flags" ]

[node name="LabelWin" type="Label" parent="MarginContainer" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 293.0
margin_right = 1004.0
margin_bottom = 307.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 0, 0.351562, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "YOU WIN!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="PauseMenu" type="PopupPanel" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 317.0
margin_top = 200.0
margin_right = 707.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
script = ExtResource( 7 )
_sections_unfolded = [ "Anchor", "Popup", "Rect", "Size Flags" ]
triggerButtonPath = NodePath("../MarginContainer/pause_button")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -75.0
margin_right = 169.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]
__meta__ = {
"_edit_group_": true
}

[node name="button_resume" type="Button" parent="PauseMenu/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 339.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Resume"
icon = ExtResource( 8 )
flat = false
align = 1
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="button_retry" type="Button" parent="PauseMenu/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 53.0
margin_right = 339.0
margin_bottom = 108.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Retry"
icon = ExtResource( 9 )
flat = false
align = 1

[node name="button_back" type="Button" parent="PauseMenu/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 112.0
margin_right = 339.0
margin_bottom = 161.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Main Menu"
icon = ExtResource( 10 )
flat = false
align = 1

[node name="EndLevelMenu" type="PopupPanel" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 317.0
margin_top = 144.0
margin_right = 707.0
margin_bottom = 442.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
script = ExtResource( 7 )
_sections_unfolded = [ "Pause" ]
triggerButtonPath = null

[node name="VBoxContainer" type="VBoxContainer" parent="EndLevelMenu" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -124.0
margin_right = 169.0
margin_bottom = 130.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="EndLevelMenu/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 339.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "PASSED!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="button_again" type="Button" parent="EndLevelMenu/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 45.0
margin_right = 339.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Replay"
icon = ExtResource( 9 )
flat = false
align = 1
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="button_next" type="Button" parent="EndLevelMenu/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 116.0
margin_right = 339.0
margin_bottom = 183.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "next level"
icon = ExtResource( 11 )
flat = false
align = 1

[node name="button_back" type="Button" parent="EndLevelMenu/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 187.0
margin_right = 339.0
margin_bottom = 254.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "main menu"
icon = ExtResource( 10 )
flat = false
align = 1

[connection signal="pressed" from="PauseMenu/VBoxContainer/button_resume" to="PauseMenu" method="_on_resume_button_pressed"]

[connection signal="pressed" from="PauseMenu/VBoxContainer/button_retry" to="PauseMenu" method="_on_retry_button_pressed"]

[connection signal="pressed" from="PauseMenu/VBoxContainer/button_back" to="PauseMenu" method="_on_button_menu_pressed"]

[connection signal="pressed" from="EndLevelMenu/VBoxContainer/button_again" to="EndLevelMenu" method="_on_retry_button_pressed"]

[connection signal="pressed" from="EndLevelMenu/VBoxContainer/button_back" to="EndLevelMenu" method="_on_button_menu_pressed"]


